# n-dimensional-llm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yaml
benchmarks/: __init__.py  chartqa.py  cord.py  doc_understanding.py  doclaynet.py  funsd.py  long_qa.py  synthetic.py  video_qa.py
benchmarks/data/: chartqa_sample.jsonl  cord_sample.jsonl  doclaynet_cache.jsonl  doclaynet_sample.jsonl  funsd_cache.jsonl  funsd_sample.jsonl
docs/: related-work-novelty.md  the-tensor-is-the-message.md  tickets.md  why-nd-inputs.md
examples/: doc_benchmark_sweeps.ipynb  multi_field_invoice.py
nd_llm/: __init__.py  model.py
nd_llm/bottleneck/: __init__.py  ib.py  learnable.py
nd_llm/constraints/: __init__.py  base.py  field.py  superposition.py
nd_llm/encoders/: __init__.py  base.py
nd_llm/metrics/: __init__.py  mi_proxy.py
nd_llm/orchestration/: __init__.py  budget.py  orchestrator.py
nd_llm/registry/: __init__.py  adapters.py  models.py
nd_llm/stm/: __init__.py  stm.py
nd_llm/utils/: __init__.py  canonical_cells.py  config.py  fields.py  mi.py
runs/: cord_rd_sample.json
scripts/: __init__.py  common.py  debug_budget_allocation.py  debug_field_usage.py  download_datasets.py  eval_rd.py  generate_wearable.py  ollama_harness.py  plot_rd_comparison.py  rd_audit.py  train.py
tests/: __init__.py  test_model.py  test_quickstart_api.py
tests/benchmarks/: test_chartqa.py  test_cord.py  test_doc_understanding.py  test_doclaynet.py  test_funsd.py  test_long_video_qa.py
tests/bottleneck/: test_ibottleneck.py
tests/constraints/: test_constraints.py
tests/examples/: test_canonical_cells.py  test_multi_field_invoice.py
tests/fixtures/: __init__.py  synthetic.py
tests/orchestration/: test_orchestrator.py
tests/registry/: test_field_adapters.py  test_registry.py
tests/scripts/: test_cli_imports.py  test_eval_cli.py  test_ollama_harness.py  test_rd_audit.py  test_scripts.py
tests/stm/: __init__.py  test_queries.py  test_superposition.py
