[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nd-llm"
version = "0.1.0"
description = "Foundational scaffolding for the n-dimensional LLM framework."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "N-Dimensional LLM Contributors"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/n-dimensional-llm/n-dimensional-llm"
Documentation = "https://github.com/n-dimensional-llm/n-dimensional-llm/tree/main/docs"
Repository = "https://github.com/n-dimensional-llm/n-dimensional-llm"
"Bug Tracker" = "https://github.com/n-dimensional-llm/n-dimensional-llm/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.5",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nd_llm"]
