[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nd-llm"
version = "0.1.0"
description = "Foundational scaffolding for the n-dimensional LLM framework."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
  {name = "N-Dimensional LLM Contributors"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/warrofua/n-dimensional-llm"
Documentation = "https://github.com/warrofua/n-dimensional-llm/tree/main/docs"
Repository = "https://github.com/warrofua/n-dimensional-llm"
"Bug Tracker" = "https://github.com/warrofua/n-dimensional-llm/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.11",
  "pre-commit>=3.5",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]
benchmarks = [
  "datasets>=4.4",
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nd_llm"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
files = [
  "benchmarks",
  "nd_llm",
  "scripts",
  "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--color=yes",
]

[tool.coverage.run]
source = ["nd_llm"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
